# ecommerce-data-formatting

./: .env.example  .gitignore  README.md  app.py  export-to-rubick-cast-format.py  import-to-rubick-cast-format.py  pyproject.toml  template.xlsx
src/: __init__.py  cli.py  config.py
src/core/: __init__.py  export_formatter.py  export_processor.py  extract_missing_formatter.py  extract_missing_processor.py  import_formatter.py  import_processor.py  merge_sample_formatter.py  merge_sample_processor.py
src/ui/: __init__.py
src/utils/: __init__.py  logging.py
