[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rubick-cast-formatting"
version = "0.1.0"
description = "A tool for formatting Excel files to CAST import format"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rubick Team"}
]
keywords = ["excel", "cast", "formatting", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.5.0",
]

[project.scripts]
rubick-format = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
